src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	body {
		@apply bg-darkBlue font-sans;
	}
}

@layer utilities {
	.display-l {
		@apply text-[2rem] font-light -tracking-[0.5px];
	}

	.display-m {
		@apply text-2xl font-light;
	}

	.display-sm {
		@apply text-[0.9375rem] font-medium leading-tight md:text-[1.5rem];
	}

	.display-xs {
		@apply text-[0.875rem] font-medium leading-tight md:text-[1.125rem];
	}

	.body-md {
		@apply text-[0.75rem] font-light md:text-[0.9375rem] md:leading-tight;
	}

	.body-sm {
		@apply text-[0.6875rem] font-light md:text-[0.8125rem] md:leading-tight;
	}

	/* Chrome, Safari and Opera */
	.no-scrollbar::-webkit-scrollbar {
		display: none;
	}

	.no-scrollbar {
		-ms-overflow-style: none; /* IE and Edge */
		scrollbar-width: none; /* Firefox */
	}
}

